// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorScreen with errorMessage renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#F8F9F9",
            "borderColor": "#E6E6E6",
            "borderRadius": 16,
            "borderWidth": 1,
            "elevation": 12,
            "marginHorizontal": 8,
            "marginVertical": 8,
            "padding": 32,
            "shadowColor": "rgba(156, 164, 169, 0.4)",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 12,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 60,
                "height": 120,
                "justifyContent": "center",
                "marginBottom": 24,
                "width": 120,
              },
              {
                "backgroundColor": "#FBF2F0",
              },
            ]
          }
        >
          <View
            style={{}}
          >
            <svg
              fill="none"
              height={64}
              style={{}}
              testID="ErrorIcon"
              viewBox="0 0 16 16"
              width={64}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M10.1569 4.75L11.2175 5.81066L8.97834 8.04984L11.3354 10.4069L10.2747 11.4675L7.91768 9.1105L5.56066 11.4675L4.5 10.4069L6.85702 8.04984L4.61785 5.81067L5.67851 4.75001L7.91768 6.98918L10.1569 4.75Z"
                fill="#C93717"
                fillRule="evenodd"
                style={{}}
              />
              <circle
                cx="8"
                cy="8"
                r="6.5"
                stroke="white"
                style={{}}
              />
            </svg>
          </View>
        </View>
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "RedHatDisplayMedium",
              "fontSize": 18,
              "lineHeight": 28,
              "paddingBottom": 16,
              "paddingTop": 8,
              "textAlign": "center",
            }
          }
        >
          oops
        </Text>
        <Text
          style={
            {
              "color": "#666666",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "lineHeight": 24,
              "marginBottom": 32,
              "textAlign": "center",
            }
          }
        >
          somethingWrong
        </Text>
        <View
          style={
            {
              "alignSelf": "stretch",
              "marginTop": 16,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={10}
            style={
              {
                "backgroundColor": "#F8F9F9",
                "borderRadius": 12,
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
                "padding": 16,
              }
            }
          >
            Déjà vu
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "paddingBottom": 16,
          "paddingHorizontal": 24,
          "paddingTop": 16,
        },
        {
          "borderTopColor": "#E6E6E6",
          "borderTopWidth": 1,
        },
      ]
    }
  >
    <View
      distance={8}
      offset={
        [
          0,
          4,
        ]
      }
      startColor="rgba(190, 201, 255, 0.28)"
      style={
        {
          "alignSelf": "stretch",
          "borderRadius": 15,
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "column",
              "width": "100%",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "borderRadius": 100,
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              {
                "attribute": "selectableItemBackground",
                "rippleRadius": undefined,
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#2F4ACD",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "height": 48,
                  "justifyContent": "center",
                  "maxHeight": 56,
                  "opacity": 1,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                  "width": "100%",
                },
                undefined,
              ]
            }
            testID="ErrorContinueButton"
          >
            <View
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <BVLinearGradient
                borderRadii={
                  [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ]
                }
                colors={
                  [
                    -13677875,
                    -15194777,
                  ]
                }
                endPoint={
                  [
                    1,
                    0,
                  ]
                }
                locations={null}
                startPoint={
                  [
                    0,
                    0,
                  ]
                }
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
            </View>
            <Text
              maxFontSizeMultiplier={1}
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "RedHatDisplaySemiBold",
                  "fontSize": 12,
                  "fontWeight": "normal",
                  "lineHeight": 24,
                  "marginLeft": 0,
                  "marginRight": 0,
                }
              }
            >
              restartApp
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`ErrorScreen without errorMessage renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#F8F9F9",
            "borderColor": "#E6E6E6",
            "borderRadius": 16,
            "borderWidth": 1,
            "elevation": 12,
            "marginHorizontal": 8,
            "marginVertical": 8,
            "padding": 32,
            "shadowColor": "rgba(156, 164, 169, 0.4)",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 12,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 60,
                "height": 120,
                "justifyContent": "center",
                "marginBottom": 24,
                "width": 120,
              },
              {
                "backgroundColor": "#FBF2F0",
              },
            ]
          }
        >
          <View
            style={{}}
          >
            <svg
              fill="none"
              height={64}
              style={{}}
              testID="ErrorIcon"
              viewBox="0 0 16 16"
              width={64}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M10.1569 4.75L11.2175 5.81066L8.97834 8.04984L11.3354 10.4069L10.2747 11.4675L7.91768 9.1105L5.56066 11.4675L4.5 10.4069L6.85702 8.04984L4.61785 5.81067L5.67851 4.75001L7.91768 6.98918L10.1569 4.75Z"
                fill="#C93717"
                fillRule="evenodd"
                style={{}}
              />
              <circle
                cx="8"
                cy="8"
                r="6.5"
                stroke="white"
                style={{}}
              />
            </svg>
          </View>
        </View>
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "RedHatDisplayMedium",
              "fontSize": 18,
              "lineHeight": 28,
              "paddingBottom": 16,
              "paddingTop": 8,
              "textAlign": "center",
            }
          }
        >
          oops
        </Text>
        <Text
          style={
            {
              "color": "#666666",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "lineHeight": 24,
              "marginBottom": 32,
              "textAlign": "center",
            }
          }
        >
          somethingWrong
        </Text>
        <View
          style={
            {
              "alignSelf": "stretch",
              "marginTop": 16,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={10}
            style={
              {
                "backgroundColor": "#F8F9F9",
                "borderRadius": 12,
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
                "padding": 16,
              }
            }
          >
            unknown
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "paddingBottom": 16,
          "paddingHorizontal": 24,
          "paddingTop": 16,
        },
        {
          "borderTopColor": "#E6E6E6",
          "borderTopWidth": 1,
        },
      ]
    }
  >
    <View
      distance={8}
      offset={
        [
          0,
          4,
        ]
      }
      startColor="rgba(190, 201, 255, 0.28)"
      style={
        {
          "alignSelf": "stretch",
          "borderRadius": 15,
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "column",
              "width": "100%",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "borderRadius": 100,
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              {
                "attribute": "selectableItemBackground",
                "rippleRadius": undefined,
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#2F4ACD",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "height": 48,
                  "justifyContent": "center",
                  "maxHeight": 56,
                  "opacity": 1,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                  "width": "100%",
                },
                undefined,
              ]
            }
            testID="ErrorContinueButton"
          >
            <View
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <BVLinearGradient
                borderRadii={
                  [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                  ]
                }
                colors={
                  [
                    -13677875,
                    -15194777,
                  ]
                }
                endPoint={
                  [
                    1,
                    0,
                  ]
                }
                locations={null}
                startPoint={
                  [
                    0,
                    0,
                  ]
                }
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
            </View>
            <Text
              maxFontSizeMultiplier={1}
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "RedHatDisplaySemiBold",
                  "fontSize": 12,
                  "fontWeight": "normal",
                  "lineHeight": 24,
                  "marginLeft": 0,
                  "marginRight": 0,
                }
              }
            >
              restartApp
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
